Fix: Button font-size too small

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -18,6 +18,10 @@ html, body {
     background: rgb(var(--main-bg));
 }
 
+input, textarea, select, button {
+    font-size: 100%;        /* Normalize */
+}
+
 input, textarea {
     background: rgb(var(--main-bg));
 	color: rgb(var(--body-color));
